--- a/ActividadesDic.html
+++ b/ActividadesDic.html
@@ -25,39 +25,39 @@
 
 
      <div class="card365">
-  <svg365 viewBox="0 0 24 24"><img src="Cartas/cuentos11.png"></svg365>
-    <div class="card__content365"><img src="Cartas/cuentos12.png">
+  <svg365 viewBox="0 0 24 24"><img src="cuentos11.png"></svg365>
+    <div class="card__content365"><img src="cuentos12.png">
     </div></div>
 
   <div class="card366">
-  <svg366 viewBox="0 0 24 24"><img src="Cartas/cuentos46.png"></svg366>
-    <div class="card__content366"><img src="Cartas/cuentos47.png">
+  <svg366 viewBox="0 0 24 24"><img src="cuentos46.png"></svg366>
+    <div class="card__content366"><img src="cuentos47.png">
     </div></div>
 
   <div class="card367">
-  <svg367 viewBox="0 0 24 24"><img src="Cartas/cuentos315.png"></svg367>
-    <div class="card__content367"><img src="Cartas/cuentos316.png">
+  <svg367 viewBox="0 0 24 24"><img src="cuentos315.png"></svg367>
+    <div class="card__content367"><img src="cuentos316.png">
     </div></div>
 
   <div class="card368">
-  <svg368 viewBox="0 0 24 24"><img src="Cartas/cuentos138.png"></svg368>
-    <div class="card__content368"><img src="Cartas/cuentos139.png">
+  <svg368 viewBox="0 0 24 24"><img src="cuentos138.png"></svg368>
+    <div class="card__content368"><img src="cuentos139.png">
     </div></div>
 
   <div class="card369">
-  <svg369 viewBox="0 0 24 24"><img src="Cartas/cuentos399.png"></svg369>
-    <div class="card__content369"><img src="Cartas/cuentos400.png">
+  <svg369 viewBox="0 0 24 24"><img src="cuentos399.png"></svg369>
+    <div class="card__content369"><img src="cuentos400.png">
     </div></div>
 
   <div class="card370">
-  <svg370 viewBox="0 0 24 24"><img src="Cartas/cuentos401.png"></svg370>
-    <div class="card__content370"><img src="Cartas/cuentos402.png">
+  <svg370 viewBox="0 0 24 24"><img src="cuentos401.png"></svg370>
+    <div class="card__content370"><img src="cuentos402.png">
     </div></div>
 
 
   <div class="card371">
-  <svg371 viewBox="0 0 24 24"><img src="Cartas/cuentos403.png"></svg371>
-    <div class="card__content371"><img src="Cartas/cuentos404.png">
+  <svg371 viewBox="0 0 24 24"><img src="cuentos403.png"></svg371>
+    <div class="card__content371"><img src="cuentos404.png">
     </div></div>
 
 
